--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body, * {
 h1, h2, h3, h4, h5, h6, p {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+.tooltip {
+    position: fixed;
+    pointer-events: none;
+    backdrop-filter: blur(10px);
+}
 
 .tooltip-table {
     width: 100%;
