--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,14 @@ h1, h2, h3, h4, h5, h6, p {
 .tooltip {
     position: fixed;
     pointer-events: none;
-    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.75);
+    backdrop-filter: blur(4px);
+    border-radius:.5em;
+    /*  fancy box shadow */
+    box-shadow: 
+    5px 5px 10px rgba(20,20,20,0.35),
+    -5px -5px 10px rgba(120,120,120,0.5);
+    border: 1px solid rgba(0,0,0,0.25);
 }
 
 .tooltip-table {
@@ -24,8 +31,8 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .tooltip-table tr:nth-of-type(even){
-    background-color: #f2f2f2;
-    backdrop-filter: blur(10px);
+    background-color: rgba(180, 180, 180, 0.25);
+    /* backdrop-filter: blur(4px); */
 }
 .tooltip-table tr td:nth-child(1) {
     max-width: 14ch;
